# server.js
@@ -2,11 +2,27 @@ const express = require('express');
 const mongodb = require('./data/database');
 const app = express();
 const bodyParser = require('body-parser');
-const port = process.env.port || 3000;
+const passport = require('passport');
+const session = require('express-session');
+const GitHubStrategy = require('passport-github2').Strategy;
+const cors = require('cors');
+const port = process.env.PORT || 3000;
+require('dotenv').config();
 
 
 // Middleware
 app.use(bodyParser.json());
+
+// Passport configuration
+app.use(session({
+  secret: 'secret',
+  resave: false,
+  saveUninitialized: true
+}));
+
+// GitHub OAuth Strategy
+app.use(passport.initialize());
+app.use(passport.session());
 
 // Swagger setup
 app.use((req, res, next) => {
@@ -19,8 +35,37 @@ app.use((req, res, next) => {
   next();
 });
 
+// Enable CORS
+app.use(cors({ methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']}));
+app.use(cors({ origin: '*'}));
 // Routes
 app.use('/', require('./routes'));
+
+passport.use(new GitHubStrategy({
+  clientID: process.env.GITHUB_CLIENT_ID,
+  clientSecret: process.env.GITHUB_CLIENT_SECRET,
+  callbackURL: process.env.CALLBACK_URL
+},
+  function(accessToken, refreshToken, profile, done) {
+    return done(null, profile);
+  }
+));
+
+passport.serializeUser((user, done) => {
+  done(null, user);
+})
+passport.deserializeUser((user, done) => {
+  done(null, user);
+})
+
+app.get('/', (req, res) => { res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : "Logged out")});
+
+app.get('/github/callback', passport.authenticate('github', {
+  failureRedirect: '/api-docs', session: false}),
+  (req, res) => {
+    req.session.user = req.user;
+    res.redirect('/');
+  });
 
 // Database
 mongodb.initDb((err) => {
